@@ -1,8 +1,11 @@
 package org.jetbrains.bsp.bazel.server.sync;
 
 import ch.epfl.scala.bsp4j.BuildTargetIdentifier;
+import com.google.protobuf.TextFormat;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
@@ -43,10 +46,12 @@ public class ProjectResolver {
             .map(
                 uri -> {
                   try {
-                    return TargetInfo.parseFrom(Files.readAllBytes(Paths.get(uri)));
+                    var builder = TargetInfo.newBuilder();
+                    var parser = TextFormat.Parser.newBuilder().setAllowUnknownFields(true).build();
+                    parser.merge(Files.readString(Paths.get(uri), UTF_8), builder);
+                    return builder.build();
                   } catch (IOException e) {
-                    e.printStackTrace();
-                    return null;
+                    throw new RuntimeException(e);
                   }
                 })
             .filter(Objects::nonNull)
